feat: meta og tags

--- a/_templates/head.partial.html
+++ b/_templates/head.partial.html
@@ -5,3 +5,6 @@
 <link rel="stylesheet" href="assets/fonts/barlow/webfont.css">
 <link rel="stylesheet" href="assets/fonts/lora/webfont.css">
 <link rel="stylesheet" href="assets/style.css">
+
+<meta property="og:url" content='https://schulzrol.github.io/recipes'/>
+<meta property="og:type" content='article'/>
