try different string syntax

--- a/_templates/category.template.html
+++ b/_templates/category.template.html
@@ -2,9 +2,9 @@
 <html lang="$lang$">
 <head>
     ${head.partial.html()}
-    <meta property="og:title" content="$category$"/>
-    <meta property="og:image" content="$image_source$"/>
-    <meta property="og:description" content="Prozkoumej všech $recipes/length$ receptů!"/>
+    <meta property='og:title' content="$category$"/>
+    <meta property='og:image' content="$image_source$"/>
+    <meta property='og:description' content="Prozkoumej všech $recipes/length$ receptů!"/>
     <title>$category$ – $if(index_title)$$index_title$$endif$</title>
 </head>
 <body>
