--- a/_templates/recipe.template.html
+++ b/_templates/recipe.template.html
@@ -2,9 +2,9 @@
 <html lang="$lang$">
 <head>
     ${head.partial.html()}
-    <meta property="og:title" content="$title$"/>
-    <meta property="og:image" content="$image_source$"/>
-    <meta property="og:description" content="$description$"/>
+    <meta property='og:title' content="$title$"/>
+    <meta property='og:image' content="$image_source$"/>
+    <meta property='og:description' content="$description$"/>
     <title>$title$ – $if(index_title)$$index_title$$endif$</title>
 </head>
 <body>
