--- a/_templates/head.partial.html
+++ b/_templates/head.partial.html
@@ -6,5 +6,5 @@
 <link rel="stylesheet" href="assets/fonts/lora/webfont.css">
 <link rel="stylesheet" href="assets/style.css">
 
-<meta property="og:url" content='https://schulzrol.github.io/recipes'/>
-<meta property="og:type" content='article'/>
+<meta property='og:url' content='https://schulzrol.github.io/recipes'/>
+<meta property='og:type' content='article'/>
