--- a/_templates/recipe.template.html
+++ b/_templates/recipe.template.html
@@ -3,7 +3,7 @@
 <head>
     ${head.partial.html()}
     <meta property='og:title' content="$title$"/>
-    <meta property='og:image' content="$image_source$"/>
+    <meta property='og:image' content="$image$"/>
     <meta property='og:description' content="$description$"/>
     <title>$title$ – $if(index_title)$$index_title$$endif$</title>
 </head>
