--- a/_templates/recipe.template.html
+++ b/_templates/recipe.template.html
@@ -2,7 +2,7 @@
 <html lang="$lang$">
 <head>
     ${head.partial.html()}
-    <meta property='og:title' content="$title$"/>
+    <meta property='og:title' content="$title$ - $description"/>
     <meta property='og:image' content="./$image$"/>
     <meta property='og:description' content="$description$"/>
     <title>$title$ – $if(index_title)$$index_title$$endif$</title>
