--- a/_templates/head.partial.html
+++ b/_templates/head.partial.html
@@ -8,3 +8,4 @@
 
 <meta property='og:url' content='$github_url$'/>
 <meta property='og:type' content='article'/>
+<meta property="article:modified_time" content="$updatedtime$">
