--- a/_templates/head.partial.html
+++ b/_templates/head.partial.html
@@ -7,6 +7,6 @@
 <link rel="stylesheet" href="assets/style.css">
 
 <meta property='og:url' content='$github_url$'/>
-<meta property='article:author' content='$site_author$' />
+<meta property='author' content='$site_author$'/>
 <meta property='og:type' content='article'/>
 <meta property="article:modified_time" content="$updatedtime$">
